--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -53,7 +53,7 @@
     <header>
         <nav class="navbar-content navbar navbar-expand-lg custom-navbar fixed-top">
             <div class="container-fluid">
-                <div class="d-flex align-items-center justify-content-between">
+                <div class="d-flex align-items-center justify-content-between w-100">
                 <a class="d-flex align-items-center justify-content-start navbar-brand logo-font" href="/">
                     <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo" class="img-fluid me-2 logo-img">
                     <span class="logo-text d-sm-inline">RubySound.fm</span>
@@ -65,7 +65,7 @@
                 </button>
                 </div>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse w-100" id="navbarNav">
                     <form class="d-flex ms-auto form-search" role="search" autocomplete="on">
                         <div class="position-relative flex-grow-1">
                             <input class="form-control me-2 input-search input-search-icon" type="search" name="q"
@@ -123,7 +123,6 @@
     <script src="{% static 'js/animation/card_search_animation.js' %}"></script>
     <script src="{% static 'js/animation/alert_log_animation.js' %}"></script>
     <script src="{% static 'js/animation/carousel_animation.js' %}"></script>
-    <script src="{% static 'js/animation/collapse_toggler_animation.js' %}"></script>
 
 
     <!-- Фичи сайта (modules/features) -->
