docs: обновление README, описание асинхронной архитектуры

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -94,7 +94,7 @@
                 <span class="text-danger copyright">&copy;</span> RubySound.fm <span class="text-danger">♬</span>
             </span>
             <nav class="link-footer nav">
-                <a class="nav-link" href="https://github.com/MRGiorgiosDev8" target="_blank" title="GitHub">
+                <a class="nav-link" href="https://github.com/MRGiorgiosDev8/musicPlatform_api_django.git" target="_blank" title="GitHub">
                     <i class="fab fa-github github-icon"></i>
                 </a>
                 <a class="nav-link" href="https://t.me/mrgiorgio8" target="_blank" title="Telegram">
