--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -13,7 +13,7 @@
     </button>
   </div>
 
-  <div class="row mb-5 info-project position-relative">
+  <div class="row mb-5 info-project shadow-sm position-relative">
     <svg class="note-icon d-none d-lg-block left hide-ipad-pro hide-ipad-mini" aria-hidden="true" viewBox="0 0 120 120"
       preserveAspectRatio="meet">
       <image href="{% static 'images/note_rubin.svg' %}" width="120" height="120" />
@@ -41,7 +41,7 @@
 
   <h2 class="mb-4 text-center popular-h2 pb-2 p-2 shadow-sm">Топ-Артисты</h2>
 
-  <div class="carousel-wrapper position-relative mb-2">
+  <div class="carousel-wrapper position-relative shadow-sm mb-2">
     <button
       class="scroll-left btn btn-danger btn-sm position-absolute top-50 start-0 translate-middle-y z-3 d-none d-md-block">&lt;</button>
     <div class="d-flex overflow-auto gap-2 pb-2" id="trending-genre-container"></div>
@@ -62,7 +62,7 @@
     Актуальный чарт
   </h2>
 
-  <div class="carousel-wrapper position-relative mb-2">
+  <div class="carousel-wrapper position-relative shadow-sm mb-2">
     <button
       class="scroll-left btn btn-danger btn-sm position-absolute top-50 start-0 translate-middle-y z-3 d-none d-md-block">&lt;</button>
     <div class="d-flex overflow-auto gap-2 pb-2" id="year-genre-container"></div>
