--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -13,7 +13,7 @@
     </button>
   </div>
 
-  <div class="row mb-5 info-project shadow-sm position-relative">
+  <div class="row mb-5 info-project position-relative">
     <svg class="note-icon d-none d-lg-block left hide-ipad-pro hide-ipad-mini" aria-hidden="true" viewBox="0 0 120 120"
       preserveAspectRatio="meet">
       <image href="{% static 'images/note_rubin.svg' %}" width="120" height="120" />
@@ -39,7 +39,7 @@
     </div>
   </div>
 
-  <h2 class="mb-4 text-center popular-h2 pb-2 p-2 shadow-sm">Топ-Артисты</h2>
+  <h2 class="mb-4 text-center popular-h2 pb-2 p-2">Топ-Артисты</h2>
 
   <div class="carousel-wrapper position-relative shadow-sm mb-2">
     <button
@@ -58,7 +58,7 @@
   <div class="row row-cols-1 mb-4 row-cols-lg-2 g-4" id="trending-container"></div>
 
 
-  <h2 id="year2026-chart" class="mb-4 pb-2 p-2 text-center popular-h2 shadow-sm">
+  <h2 id="year2026-chart" class="mb-4 pb-2 p-2 text-center popular-h2">
     Актуальный чарт
   </h2>
 
