--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -7,7 +7,7 @@
 <section id="popular-block" class="container my-5">
   <h1 class="visually-hidden">Поиск и прослушивание музыки онлайн — тренды и чарты 2026</h1>
 
-  <div class="d-none d-lg-flex justify-content-start mb-3 mt-5">
+  <div class="d-none d-lg-flex justify-content-start mb-5">
     <button id="goto-year-chart" type="button" class="btn btn-danger btn-sm me-2">
       🎵 Актуальный чарт <span class="text-white">⬇</span>
     </button>
