--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -27,6 +27,7 @@
 
     {% compress css %}
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'vendor/hamburgers/hamburgers.min.css' %}">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     {% endcompress %}
 
@@ -58,10 +59,12 @@
                     <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo" class="img-fluid me-2 logo-img">
                     <span class="logo-text d-sm-inline">RubySound.fm</span>
                 </a>
-                <button class="navbar-toggler ms-auto btn-sm p-1" type="button" data-bs-toggle="collapse"
+                <button class="hamburger hamburger--elastic ms-auto btn-sm p-1 d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon custom-toggler-icon mt-2"></span>
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
                 </button>
                 </div>
 
@@ -123,6 +126,7 @@
     <script src="{% static 'js/animation/card_search_animation.js' %}"></script>
     <script src="{% static 'js/animation/alert_log_animation.js' %}"></script>
     <script src="{% static 'js/animation/carousel_animation.js' %}"></script>
+    <script src="{% static 'js/animation/hamburger_animation.js' %}"></script>
 
 
     <!-- Фичи сайта (modules/features) -->
