style: изменение fw для спиннеров загрузки

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -85,7 +85,7 @@
     <main class="flex-grow-1">
         <div id="searchLoader" class="search-loading" hidden>
             <i class="fas fa-spinner fa-spin"></i>
-            <span style="font-weight: 300;">поиск музыки ...</span>
+            <span class="fw-normal">загрузка данных…</span>
         </div>
         {% block popular %}{% endblock %}
         {% block content %}{% endblock %}
