--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -52,7 +52,7 @@
 
   <div id="trending-spinner" class="search-loading" hidden>
     <i class="fas fa-spinner fa-spin"></i>
-    <span style="font-weight: 300;">загрузка данных…</span>
+    <span class="fw-normal">загрузка данных…</span>
   </div>
 
   <div class="row row-cols-1 mb-4 row-cols-lg-2 g-4" id="trending-container"></div>
@@ -72,7 +72,7 @@
 
   <div id="year-spinner" class="search-loading" hidden>
     <i class="fas fa-spinner fa-spin"></i>
-    <span style="font-weight: 300;">загрузка данных…</span>
+    <span class="fw-normal">загрузка данных…</span>
   </div>
 
   <div id="year2025-container" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-3"></div>
