--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -127,7 +127,7 @@
     <script src="{% static 'js/animation/alert_log_animation.js' %}"></script>
     <script src="{% static 'js/animation/carousel_animation.js' %}"></script>
     <script src="{% static 'js/animation/hamburger_animation.js' %}"></script>
-
+    <script src="{% static 'js/animation/radial_reveal_animation.js' %}"></script>
 
     <!-- Фичи сайта (modules/features) -->
     <script src="{% static 'js/features/trending.js' %}"></script>
