--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -50,10 +50,7 @@
   </div>
 
 
-  <div id="trending-spinner" class="search-loading" hidden>
-    <i class="fas fa-spinner fa-spin"></i>
-    <span class="fw-normal">загрузка данных…</span>
-  </div>
+  <div id="trending-spinner" class="search-loading" hidden></div>
 
   <div class="row row-cols-1 mb-4 row-cols-lg-2 g-4" id="trending-container"></div>
 
@@ -70,10 +67,7 @@
       class="scroll-right btn btn-danger btn-sm position-absolute top-50 end-0 translate-middle-y z-3 d-none d-md-block">&gt;</button>
   </div>
 
-  <div id="year-spinner" class="search-loading" hidden>
-    <i class="fas fa-spinner fa-spin"></i>
-    <span class="fw-normal">загрузка данных…</span>
-  </div>
+  <div id="year-spinner" class="search-loading" hidden></div>
 
   <div id="year2025-container" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-3"></div>
 
