--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -3,7 +3,7 @@
     --color-primary-dark: #e13737ec;
     --color-bg: #000000;
     --color-card-bg: rgba(255, 255, 255, 0.5);
-    --color-card-bg-light: #ffffff80;
+    --color-card-bg-light: #ededed64;
     --color-text-dark: #242424f6;
     --color-text-light: #fff;
     --color-text-muted: #777;
@@ -19,15 +19,12 @@
     --border-light-gray: 1.4px solid rgba(150, 150, 150, 0.304);
     --border-accent-heading: 2px solid rgba(255, 65, 55, 0.75);
     --shadow-card:
-        0 1px 3px rgba(0, 0, 0, 0.06),
-        0 4px 10px rgba(0, 0, 0, 0.04);
+        0 1px 3px rgba(0, 0, 0, 0.149),
+        0 4px 10px rgba(0, 0, 0, 0.077);
 }
 
 body {
-    background-image:
-        linear-gradient(rgba(231, 231, 231, 0.35), rgba(230, 230, 230, 0.722)),
-        url('../images/backgroundai.png');
-    /* background-image: url('../images/backgroundai.png'); */
+    background-image: url('../images/backgroundai.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -308,18 +305,18 @@ body {
 .genre-btn {
     position: relative;
     overflow: hidden;
-    background-color: var(--color-card-bg-light);
+    background-color: var(--color-card-bg-light) !important;
     color: var(--color-text-dark) !important;
     font-weight: 400;
-    font-family: var(--font-heading);
-    border: 1.4px dotted rgba(175, 175, 175, 0.865) !important;
+    font-family: var(--font-heading) !important;
+    border: 1.4px dotted rgb(69, 69, 69) !important;
 
 }
 
 .genre-btn .genre-btn-reveal {
     position: absolute;
     border-radius: 50%;
-    background-color: var(--color-primary);
+    background-color: var(--color-primary) !important;
     pointer-events: none;
     transform-origin: center center;
     transform: scale(0);
@@ -332,7 +329,7 @@ body {
 }
 
 .genre-btn .genre-btn-label {
-    color: inherit;
+    color: inherit !important;
 }
 
 .genre-btn:hover,
@@ -386,6 +383,18 @@ body {
     background-color: #fff;
 }
 
+.liquid-spinner-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.liquid-spinner {
+  width: 50px;
+  height: 50px;
+  color: var(--color-primary);
+}
+
 
 @media (max-width: 575.98px) {
 
@@ -437,6 +446,7 @@ body {
 
     .ruby_span {
         font-size: 1.1em;
+        color: #e44646;
     }
 
     .about-h2::after {
@@ -469,3 +479,4 @@ body {
         display: none !important;
     }
 }
+
