--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -107,7 +107,6 @@
         </div>
     </footer>
 
-    {% compress js %}
     <!-- Библиотеки (vendor) -->
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'vendor/gsap/gsap.min.js' %}"></script>
@@ -128,6 +127,7 @@
     <script src="{% static 'js/animation/hamburger_animation.js' %}"></script>
     <script src="{% static 'js/animation/radial_reveal_animation.js' %}"></script>
     <script src="{% static 'js/animation/spinner_animation.js' %}"></script>
+    <script src="{% static 'js/animation/neon_search_border.js' %}"></script>
 
     <!-- Фичи сайта (modules/features) -->
     <script src="{% static 'js/features/trending.js' %}"></script>
@@ -141,7 +141,6 @@
 
     <!-- Утилиты -->
     <script src="{% static 'js/utils/utils.js' %}"></script>
-    {% endcompress %}
 
 </body>
 
