--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block popular %}
 
-<section id="popular-block" class="container my-5">
+<section id="popular-block" class="container container-wide my-5">
   <h1 class="visually-hidden">Поиск и прослушивание музыки онлайн — тренды и чарты 2026</h1>
 
   <div class="d-none d-lg-flex justify-content-start mb-5">
