--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -28,7 +28,12 @@
     {% compress css %}
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'vendor/hamburgers/hamburgers.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/layout.css' %}">
+    <link rel="stylesheet" href="{% static 'css/components.css' %}">
+    <link rel="stylesheet" href="{% static 'css/forms.css' %}">
+    <link rel="stylesheet" href="{% static 'css/animations.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     {% endcompress %}
 
     <link rel="icon" type="image/x-icon" href="{% static 'images/musicico.ico' %}">
@@ -55,17 +60,18 @@
         <nav class="navbar-content navbar navbar-expand-lg custom-navbar fixed-top">
             <div class="container-fluid">
                 <div class="d-flex align-items-center justify-content-between w-100">
-                <a class="d-flex align-items-center justify-content-start navbar-brand logo-font" href="/">
-                    <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo" class="img-fluid me-2 logo-img">
-                    <span class="logo-text d-sm-inline">RubySound.fm</span>
-                </a>
-                <button class="hamburger hamburger--elastic ms-auto btn-sm p-1 d-lg-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="hamburger-box">
-                        <span class="hamburger-inner"></span>
-                    </span>
-                </button>
+                    <a class="d-flex align-items-center justify-content-start navbar-brand logo-font" href="/">
+                        <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo"
+                            class="img-fluid me-2 logo-img">
+                        <span class="logo-text d-sm-inline">RubySound.fm</span>
+                    </a>
+                    <button class="hamburger hamburger--elastic ms-auto btn-sm p-1 d-lg-none" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
                 </div>
 
                 <div class="collapse navbar-collapse w-100" id="navbarNav">
@@ -76,7 +82,8 @@
                                 placeholder="поиск музыки..." style="appearance: none; -webkit-appearance: none;">
                             <button type="button" class="btn-clear-search" id="clearSearch" style="display: none;">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-                                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                                    <path
+                                        d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
                                 </svg>
                             </button>
                         </div>
@@ -99,7 +106,8 @@
                 <span class="text-danger copyright">&copy;</span> RubySound.fm <span class="text-danger">♬</span>
             </span>
             <nav class="link-footer nav me-0 me-lg-1">
-                <a class="nav-link" href="https://github.com/MRGiorgiosDev8/musicPlatform_api_django.git" target="_blank" title="GitHub">
+                <a class="nav-link" href="https://github.com/MRGiorgiosDev8/musicPlatform_api_django.git"
+                    target="_blank" title="GitHub">
                     <i class="fab fa-github github-icon"></i>
                 </a>
                 <a class="nav-link" href="https://t.me/mrgiorgio8" target="_blank" title="Telegram">
