--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -1,18 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Главная – RubySound.fm{% endblock %}
+{% block title %}RubySound.fm{% endblock %}
 
 {% block popular %}
 
 <section id="popular-block" class="container container-wide my-5">
   <h1 class="visually-hidden">Поиск и прослушивание музыки онлайн — тренды и чарты 2026</h1>
-
-  <div class="d-none d-lg-flex justify-content-start mb-5">
-    <button id="goto-year-chart" type="button" class="btn btn-danger btn-sm me-2">
-      🎵 Актуальный чарт <span class="text-white">⬇</span>
-    </button>
-  </div>
-
+  
   <div class="row mb-5 info-project position-relative">
     <svg class="note-icon d-none d-lg-block left hide-ipad-pro hide-ipad-mini" aria-hidden="true" viewBox="0 0 120 120"
       preserveAspectRatio="meet">
