--- a/music_api/static/css/base.css
+++ b/music_api/static/css/base.css
@@ -16,10 +16,10 @@
     --border-radius-card: 14px;
     --border-radius-small: 11px;
     --border-accent: 1.4px solid rgba(255, 65, 55, 0.75);
-    --border-light-gray: 1.4px solid rgba(150, 150, 150, 0.304);
+    --border-light-white: 2px solid #ffffff;
     --border-accent-heading: 2px solid rgba(255, 65, 55, 0.75);
     --shadow-card:
-        0 1px 3px rgba(23, 23, 23, 0.103),
+        0 1px 3px rgba(23, 23, 23, 0.095),
         0 4px 10px rgba(0, 0, 0, 0.077);
 }
 
