--- a/music_api/static/css/components.css
+++ b/music_api/static/css/components.css
@@ -53,7 +53,7 @@
     background-color: var(--color-card-bg-light);
     border-radius: var(--border-radius-card);
     box-shadow: var(--shadow-card);
-    border: var(--border-light-gray);
+    border: var(--border-light-white);
 }
 
 .track-item {
@@ -101,6 +101,7 @@
     border-radius: var(--border-radius-card);
     background-color: var(--color-card-bg-light);
     box-shadow: var(--shadow-card);
+    border: var(--border-light-white);
 }
 
 .about-h2 {
@@ -111,11 +112,10 @@
 .about-h2::after {
     content: "";
     display: block;
-    height: 1.5px;
+    height: 2px;
     background-color: var(--color-link-hover);
-    border-radius: 7%;
     width: 7%;
-    margin: 8.3px auto 0;
+    margin: 8px auto 0;
 }
 
 .box-info {
@@ -200,7 +200,7 @@
     color: var(--color-text-dark);
     font-weight: 400;
     font-family: var(--font-heading);
-    border: 1.4px dotted rgb(69, 69, 69);
+    border: 1.1px solid;
 }
 
 .genre-btn .genre-btn-reveal {
@@ -228,7 +228,7 @@
 .genre-btn:focus-visible {
     background-color: var(--color-card-bg-light) !important;
     color: var(--color-text-dark) !important;
-    border-color: rgb(69, 69, 69) !important;
+    border-color: rgba(181, 181, 181, 0.901) !important;
     outline: none !important;
     box-shadow: none !important;
 }
